k8s/tracks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracks-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/tracks
            pathType: "Prefix"
            backend:
              service:
                name: tracks-service
                port:
                  number: 80
